fixing safari stuck scroll

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -11,7 +11,6 @@
   html,
   body {
     margin: 0;
-    overflow-x: hidden;
     padding: 0;
     height: 100%;
     font-family: "Avenir Next", sans-serif;
